--- a/src/app/views/emails/registration.hbs
+++ b/src/app/views/emails/registration.hbs
@@ -1,7 +1,8 @@
 <strong>Olá, {{ name }}</strong>
 <p>Obrigado por fazer parte da nossa equipe, confira os detalhes do seu plano abaixo: </p>
 <p>
-  <strong>Data de inicio do plano: {{start}}</strong> <br />
-  <strong>Data de final do plano: {{end}}</strong> <br />
-  <strong>Valor do plano: R$ {{value}}</strong> <br />
+  Data de início informada: <strong>{{start}}</strong> Plano selecionado:
+  <strong>{{plan_title}}</strong> ({{ duration }} meses depois do início)
+  Data de término calculada: <strong>{{end}}</strong>
+  Preço calculado:<strong> R$ {{value}}</strong> <br />
 </p>
